# libpano13

./: .hgignore  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.hg  ColourBrightness.c  INSTALL  PTcommon.c  PaniniGeneral.c  adjust.c  bootstrap  configure.ac  correct.c  file.c  filter.c  fourier.c  levmar.c  levmar.h  lmdif.c  math.c  optimize.c  parser.c  ppm.c  ptstitch.c  queryfeature.c  resample.c  seamer_.c  sys_ansi.c  sys_compat_win.c  sys_win.c  tiff.c  version.h
CMakeModules/: FindSUITESPARSE.cmake
man/: CMakeLists.txt  Makefile
tests/simpleTiff2psd/reference/: simpleStitch_crop_1_layer.psd  simpleStitch_crop_2_layer.psd  simpleStitch_uncrop_1_layer.psd  simpleStitch_uncrop_2_layer.psd  simpleTiff16-16-_uncrop_1_layer.psd  simpleTiff16-16-_uncrop_2_layer.psd
tools/: PTAInterpolate.c  PTcrop.c  PTtiff2psd.c  PTtiffdump.c  panoinfo.c
